<resources>
    <string name="app_name">Travelly</string>
    <string name="next">Next</string>
    <string name="startApp">Let\'s start</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_message">Sign in and let’s get going</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="New">New?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="introHome">Explore the beautiful world!</string>
    <string name="search">Search</string>
    <string name="booking_services">Booking Services</string>
    <string name="trips">Trips</string>
    <string name="hotel">Hotel</string>
    <string name="transport">Transport</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="account_name">Account name</string>
    <string name="personal_information">Personal information</string>
    <string name="payment_and_cards">Payment and cards</string>
    <string name="saved">Saved</string>
    <string name="booking_history">Booking history</string>
    <string name="settings">Settings</string>
    <string name="end_session">End session</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="save_changes">Save changes</string>
    <string name="hello">Hello</string>
    <string name="sign_up_message">Sign up and let’s get going</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="ok">OK</string>
    <string name="booking">Booking</string>
    <string name="old_password">Old password</string>
    <string name="transport_booking">Transport Booking</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure">Departure</string>
    <string name="_return">Return</string>
    <string name="choose_your_departure_location">Choose your departure location</string>
    <string name="choose_your_destination_location">Choose your destination location</string>
    <string name="passenger_and_luggage"><![CDATA[Passenger & Luggage]]></string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="_class">Class</string>
    <string name="flights">Flights</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="number">Number</string>
    <string name="filters">Filters</string>
    <string name="_12am_6am">12AM - 6AM</string>
    <string name="_6am_12pm">6AM - 12PM</string>
    <string name="_12pm_6pm">12PM - 6PM</string>
    <string name="_6pm_12am">6PM - 12AM</string>
    <string name="arrival">Arrival</string>
    <string name="facilities">Facilities</string>
    <string name="sort_by">Sort by</string>
    <string name="arrival_time">Arrival time</string>
    <string name="departure_time">Departure time</string>
    <string name="lowest_fare">Lowest fare</string>
    <string name="duration">Duration</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="select_seats">Select Seats</string>
    <string name="traveller">Traveller</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="your_seats">Your seats</string>
    <string name="total_price">Total price</string>
    <string name="_continue">Continue</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="boarding_pass">Boarding Pass</string>
    <string name="download_ticket">Download ticket</string>
    <string name="passenger">Passenger</string>
    <string name="ticket">Ticket</string>
    <string name="seat">Seat</string>
    <string name="brand_name">NHK Air</string>
</resources>