<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSignUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/back_button"
        android:clickable="true"
        android:focusable="true"
        android:onClick="backToWelcome"
        android:orientation="vertical"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        android:text="@string/hello"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="54dp"
        android:text="@string/sign_up_message"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="18dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/box"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:orientation="vertical"
        android:paddingVertical="18dp"
        android:textColorHint="#717171"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordInput2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/box"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:orientation="vertical"
            android:paddingVertical="18dp"
            android:textColorHint="#717171"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="18dp"
            android:background="@drawable/eye"
            android:onClick="toggleShowHidePassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/peach_box"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:onClick="realSignUp"
        android:orientation="vertical"
        android:paddingVertical="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:text="@string/already_have_an_account"
            android:textColor="#050505"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSignIn"
            android:text="@string/sign_in"
            android:textColor="#01635D"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>