<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainWelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="35dp"
        android:text="@string/welcome_to"
        android:textColor="#01635D"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="11dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/logo_green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="117dp"
        android:text="@string/app_name"
        android:textColor="#01635D"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/peach_box"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:onClick="buttonSignUp"
        android:orientation="vertical"
        android:paddingVertical="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/box"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:onClick="buttonSignIn"
        android:orientation="vertical"
        android:paddingVertical="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#FEA36B"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>