<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainAccountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFF5F5F5"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="26dp"
            android:text="@string/account"
            android:textColor="#050505"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="9dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="46dp"
            android:fontFamily="sans-serif"
            android:textColor="#050505"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="27dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="personalInformation"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="9dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/account_icon_peach" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/personal_information"
                android:textColor="#050505"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="27dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="notAvailable"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="9dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/payment_setting_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/payment_and_cards"
                android:textColor="#050505"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="27dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="notAvailable"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="9dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/saved_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/saved"
                android:textColor="#050505"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="27dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="notAvailable"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="9dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/booking_history" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/booking_history"
                android:textColor="#050505"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="27dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="notAvailable"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="9dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/setting_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textColor="#050505"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/box"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="endSession"
            android:orientation="horizontal"
            android:paddingVertical="21dp">

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/end_session_icon"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_session"
                android:textColor="#FF3636"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@drawable/half_box"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="10dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@color/white"
                android:clickable="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:focusable="true"
                android:gravity="center"
                android:onClick="changeTab"
                android:orientation="horizontal"
                android:paddingHorizontal="25dp"
                android:paddingVertical="6dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/home_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/booking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@color/white"
                android:clickable="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:onClick="changeTab"
                android:orientation="horizontal"
                android:paddingHorizontal="25dp"
                android:paddingVertical="6dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/booking_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/noti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@color/white"
                android:clickable="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:focusable="true"
                android:gravity="center"
                android:onClick="changeTab"
                android:orientation="horizontal"
                android:paddingHorizontal="25dp"
                android:paddingVertical="6dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/noti_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:background="@drawable/light_peach_box"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="6dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="9dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/account_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="#050505"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>